--- a/samples/webapi/appsettings.Development.json
+++ b/samples/webapi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Database": {
+    "Connection": "Server=db;Database=master;User=sa;Password=Your_password123;"
   }
 }
