--- a/samples/webapi/appsettings.json
+++ b/samples/webapi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "Connection": "Server=db;Database=master;User=sa;Password=Your_password123;"
+  }
 }
