chore: change db connection string

--- a/samples/webapi/appsettings.Development.json
+++ b/samples/webapi/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "Database": {
-    "Connection": "Server=db;Database=master;User=sa;Password=Your_password123;"
+    "Connection": "Server=db;Database=master;User=sa;Password=pass@123;"
   }
 }
