--- a/samples/webapi/appsettings.json
+++ b/samples/webapi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "Connection": "Server=db;Database=master;User=sa;Password=Your_password123;"
+    "Connection": "Server=db;Database=master;User=sa;Password=pass@123;"
   }
 }
