--- a/samples/webapi/docker-compose.yml
+++ b/samples/webapi/docker-compose.yml
@@ -1,13 +1,10 @@
-version: "3.9"
+version: '3'
 services:
-    web:
-        build: .
-        ports:
-            - "8000:80"
-        depends_on:
-            - db
-    db:
-        image: "mcr.microsoft.com/mssql/server"
+    ms-sql-server:
+        image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
         environment:
-            SA_PASSWORD: "pass@123"
-            ACCEPT_EULA: "Y"
+          ACCEPT_EULA: "Y"
+          SA_PASSWORD: "pass@123"
+          MSSQL_PID: Express
+        ports:
+          - "1433:1433"
