chore: seed database on app startup

--- a/samples/webapi/appsettings.json
+++ b/samples/webapi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "Connection": "Server=db;Database=master;User=sa;Password=pass@123;"
+    "Connection": "Server=localhost,1433;Initial Catalog=demo_db;User ID=sa;Password=pass@123;"
   }
 }
