--- a/samples/webapi/Dockerfile
+++ b/samples/webapi/Dockerfile
@@ -1,7 +1,22 @@
-FROM mcr.microsoft.com/dotnet/aspnet:5.0
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
+WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 
-COPY bin/Release/net5.0/publish/ App/
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /src
+COPY ["webapi.csproj", "webapi/"]
+RUN dotnet restore "webapi/webapi.csproj" 
 
-WORKDIR /App
+WORKDIR "/src/webapi"
+COPY . .
 
-ENTRYPOINT ["dotnet", "App.dll"]
+RUN dotnet build "webapi.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "webapi.csproj" -c Release -o /app/publish --self-contained false --no-restore
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "webapi.dll"]
